Adding multi line textboxes. Touch still don't work though

--- a/Info.plist
+++ b/Info.plist
@@ -17,6 +17,7 @@
 		<string>AppleHourGlass</string>
 		<string>AppleSimpleArrow</string>
 		<string>AppleTextbox</string>
+		<string>AppleMultiText</string>
 		<string>AppleScreen</string>
 		<string>Main</string>
 	</array>
