Adding selector and fixing bug with scrolling

--- a/Info.plist
+++ b/Info.plist
@@ -16,6 +16,7 @@
 		<string>Textbox</string>
 		<string>AppleHourGlass</string>
 		<string>AppleSimpleArrow</string>
+		<string>AppleSelector</string>
 		<string>AppleTextbox</string>
 		<string>AppleMultiText</string>
 		<string>AppleScreen</string>
